--- a/views/techJob.html
+++ b/views/techJob.html
@@ -24,23 +24,17 @@
 				<dd> {{job.description}} </dd>
 
 				<dt>Special Instructions</dt>
-				<dd> {{job.instructions}} </dd>
+				<dd> {{job.instrucitons}} </dd>
 			</dl>
 			<h2>Parts List</h2>
 			<ul class="list-group">
-				<li class="list-group-item" ng-repeat="part in parts">
+				<li class="list-group-item" ng-repeat="part in job.parts">
 					<span class="badge">{{part.qty}}</span>
 					{{part.name}}
 				</li>
 			</ul>
 			<div class="clearfix">
 				<form >
-					<div class="form-group clearfix">
-						<label for="textareaNotes" class="col-sm-2 control-label">Notes:</label>
-						<div class="col-sm-10">
-							<textarea name="notes" id="textareaNotes" class="form-control" rows="8" ></textarea>
-						</div>
-					</div>
 					<div class="form-group clearfix">
 						<label for="inputAdditionalPart" class="col-xs-12 col-sm-2 control-label">Additional Parts:</label>
 						<div class="col-xs-8">
@@ -49,6 +43,13 @@
 						<div class="col-xs-2">
 							<button type="button" class="btn btn-default">Add</button>
 						</div>
+					</div>
+					<div class="form-group clearfix">
+						<label for="textareaNotes" class="col-sm-2 control-label">Notes:</label>
+						<div class="col-sm-10">
+							<textarea name="notes" id="textareaNotes" class="form-control" rows="8" ></textarea>
+						</div>
+						
 					</div>
 					<hr>
 					<div class="form-group clearfix">
