--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -17,10 +17,10 @@
 				</div>
 				
 				<div class="form-group">
-					<input type="number" class="form-control" id="part_quantity" placeholder="Quantity" ng-model="part.quantity">
+					<input type="number" class="form-control" id="part_quantity" placeholder="Quantity" ng-model="part.quantity" size="5">
 				</div>
 				<div class="form-group">
-					<input type="number" class="form-control" id="part_low_quantity" placeholder="Low Quantity" ng-model="part.lowQuantity">
+					<input type="number" class="form-control" id="part_low_quantity" placeholder="Low Quantity" ng-model="part.lowQuantity" size="5">
 				</div>
 
 				<button type="submit" class="btn btn-primary" ng-click="addPart()">Add Part</button>
