directives and factory

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,4 +1,7 @@
-<div ng-controller="dashboardCtrl">
+<div 
+	yw-active-menu="Dashboard"
+    yw-active-title="Manage Dashboard"
+	ng-controller="dashboardCtrl">
 	<div class="row">
 		<div class="col-md-12">
 			<h2>Active Jobs </h2>
