--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -1,4 +1,7 @@
-<div ng-controller="inventoryCtrl">
+<div 
+	yw-active-menu="Inventory"
+	yw-active-title="Inventory manager"
+	ng-controller="inventoryCtrl">
 	<h2>Inventory View</h2>
 	<div class="row">
 		<div class="col-sm-12">
