--- a/public/views/jobs.html
+++ b/public/views/jobs.html
@@ -1,4 +1,7 @@
-<div class="jobs" ng-controller="jobsCtrl">
+<div class="jobs" 
+	yw-active-menu="Jobs"
+	yw-active-title="All Jobs"
+	ng-controller="jobsCtrl">
 	<table class="table table-striped">
 		<thead>
 			<tr>
