--- a/public/views/techJob.html
+++ b/public/views/techJob.html
@@ -1,4 +1,4 @@
-<div ng-controller="techJobCtrl">
+<!-- <div ng-controller="techJobCtrl">
 	<h1>Job Details</h1>
 	<form action="">
 		<input type="hidden" value="{{job.id}}" name="job_id">
@@ -64,4 +64,4 @@
 		</div>
 
 	</form>
-</div>
+</div> -->
