--- a/public/less/style.less
+++ b/public/less/style.less
@@ -94,6 +94,14 @@ body {
 	}
 }
 
+.dashboard{
+  .active-jobs{
+    tbody tr{
+      cursor: pointer;
+    }
+  }
+}
+
 
 /*
  * Placeholder dashboard ideas
