--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,9 @@ body {
 .dashboard .active-jobs tbody tr {
   cursor: pointer;
 }
+.jobs .job-row {
+  cursor: pointer;
+}
 /*
  * Placeholder dashboard ideas
  */
