--- a/public/views/jobs.html
+++ b/public/views/jobs.html
@@ -2,66 +2,62 @@
 	yw-active-menu="Jobs"
 	yw-active-title="All Jobs"
 	ng-controller="jobsCtrl">
-	<div class="row edit-job">
+	<div class="row edit-job" ng-show="editJob">
 		<form >
 			<div class="col-sm-4">
 				<h2>Company</h2>
-				//load company
+				<address>
+					<strong>Contact: {{selectedJob.companyDetails.contactName}}</strong><br>
+					{{selectedJob.companyDetails.address}}<br>
+					{{selectedJob.companyDetails.city}}, {{selectedJob.companyDetails.state}}, {{selectedJob.companyDetails.zip}}<br>
+					{{selectedJob.companyDetails.phone}}
+				</address>
 			</div>
 			<div class="col-sm-4">
 				<h2>Details</h2>
-				<div class="form-group"><input type="text" class="form-control" name="jobType" id="jobType" ng-model="newJob.type" placeholder="Job Type"></div>
-				<div class="form-group"><input type="text" class="form-control" name="startDate" id="startDate" ng-model="newJob.startDate" placeholder="Start Date"></div>
-				<div class="form-group"><input type="text" class="form-control" name="startTime" id="startTime" ng-model="newJob.startTime" placeholder="Start Time"></div>
-				<div class="form-group"><input type="text" class="form-control" name="endDate" id="endDate" ng-model="newJob.endDate" placeholder="End Date"></div>
 				<div class="form-group">
-					Job Description
-					<textarea name="description" id="description" cols="30" rows="3" class="form-control" ng-model="newJob.description"></textarea>
+					Type of Job: {{selectedJob.type}}
 				</div>
 				<div class="form-group">
-					Job Special Instructions
-					<textarea name="instructions" id="instructions" cols="30" rows="3" class="form-control" ng-model="newJob.instructions"></textarea>
+					Start Date: {{selectedJob.startDate +' '+ selectedJob.startTime}}
 				</div>
-
-				<div class="form-group row" ng-repeat="item in inventory">
-					<div class="col-xs-5">
-						{{item.partNumber}}:{{item.name}}
-					</div>
-					<div class="col-xs-2">
-						<select name="company_select" id="Company_select" class="form-control"  ng-model="newJob.part[item.partNumber]" >
-							<option value="">QTY</option>
-							<option value="1">1</option>
-							<option value="2">2</option>
-							<option value="3">3</option>
-							<option value="4">4</option>
-							<option value="5">5</option>
-							<option value="6">6</option>
-							<option value="7">7</option>
-							<option value="8">8</option>
-							<option value="10">10</option>
-						</select>
-					</div>
-				</div>
-
 				<div class="form-group">
-					Tech Notes
-					<textarea name="" id="" cols="30" rows="3" class="form-control" readonly="true">Tech notes</textarea>
+					End Date: {{selectedJob.endDate}}
 				</div>
-				<div class="form-group"><input type="text" class="form-control" name="completeDate" id="completeDate" ng-model="newJob.completeDate" ></div>
-				<div class="form-group"><input type="text" class="form-control" name="totalTime" id="totalTime" ng-model="newJob.totalTime" ></div>
+				<div class="form-group">
+					Job Description: {{selectedJob.description}}
+				</div>
+				<div class="form-group">
+					Job Special Instructions: {{selectedJob.instructions}}
+				</div>
+				<h4>Parts: </h4>
+				<p ng-repeat="part in selectedJob.parts">
+					{{part.partNumber}} - {{part.qty}}
+				</p>
+				
+				<div class="form-group">
+					Tech Assigned: {{getTechName(selectedJob.totalTime)}}
+				</div>
+				<div class="form-group">
+					Tech Notes: {{selectedJob.techNotes}}
+				</div>
+				<div class="form-group">
+					Complete Date: {{selectedJob.completeDate}}
+				</div>
+				<div class="form-group">
+					Total Time: {{selectedJob.totalTime}}
+				</div>
 			</div>
 			<div class="col-sm-4">
-				<h2>Final</h2>
-				<div class="form-group">
-					<select name="selectTech" id="inputSelectTech" class="form-control" ng-model="newJob.techAssignedId" ng-options="tech.fname +' '+ tech.lname for tech in technicians track by tech.techNumber">
-						<option value="">Select Technician</option>
-					</select>
-				</div>
+				<h2>Manager</h2>
 				
 				<div class="form-group">
 					Manager Notes
-					<textarea name="managerNotes" id="managerNotes" cols="30" rows="3" class="form-control" ng-model="newJob.managerNotes"></textarea>
+					<textarea name="managerNotes" id="managerNotes" cols="30" rows="3" class="form-control" ng-model="selectedJob.managerNotes"></textarea>
 				</div>
+
+				<button type="button" class="btn btn-default" ng-click="closeOpenJob()">Close</button>
+				<button type="submit" class="btn btn-primary" ng-click="updateJob(selectedJob._id)">Update</button>
 			</div>
 		</form>
 	</div>
@@ -77,7 +73,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="job in jobs | orderBy : ['startDate','-startTime']">
+					<tr class="job-row" ng-repeat="job in jobs | orderBy : ['startDate','-startTime']" ng-click="setSelectedJob(job._id)">
 						<td>{{job.companyDetails[0].companyName}}</td>
 						<td>{{job.type}}</td>
 						<td>{{job.startDate}} {{job.startTime}}</td>
@@ -85,6 +81,43 @@
 					</tr>
 				</tbody>
 			</table>
+		</div>
+	</div>
+	<div class="modal fade" id="addPartModal">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title">Add Additional Parts</h4>
+				</div>
+				<div class="modal-body">
+					<div class="form-group row" ng-repeat="item in inventory">
+						<div class="col-xs-7">
+							{{item.partNumber}}:{{item.name}}
+						</div>
+						<div class="col-xs-3">
+							<form>
+								<select name="company_select" id="Company_select" class="form-control"  ng-model="selectedJob.part[item.partNumber]" >
+									<option value="">QTY</option>
+									<option value="1">1</option>
+									<option value="2">2</option>
+									<option value="3">3</option>
+									<option value="4">4</option>
+									<option value="5">5</option>
+									<option value="6">6</option>
+									<option value="7">7</option>
+									<option value="8">8</option>
+									<option value="10">10</option>
+								</select>
+							</form>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary" ng-click="addPartsToJob(jobID,addParts)">Add Parts</button>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
