Remove auth, stylized tiles to get to respective dashboards.

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -192,6 +192,20 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   }
+  .personnel {
+    .thumbnail{
+      .glyphicon{
+        font-size: 80px;
+        margin: 30px 0 0;
+      }
+      .caption{
+        h3{
+          font-weight: bold;
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
 
 }
 .tech-page{
