--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,6 +135,14 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.login .personnel .thumbnail .glyphicon {
+  font-size: 80px;
+  margin: 30px 0 0;
+}
+.login .personnel .thumbnail .caption h3 {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
 .tech-page #map-container {
   height: 300px;
 }
