--- a/public/less/style.less
+++ b/public/less/style.less
@@ -214,6 +214,26 @@ body {
   }
 }
 
+.invoice{
+  #invoiceModal{
+    .invoice-title h2, .invoice-title h3 {
+        display: inline-block;
+    }
+
+    .table > tbody > tr > .no-line {
+        border-top: none;
+    }
+
+    .table > thead > tr > .no-line {
+        border-bottom: none;
+    }
+
+    .table > tbody > tr > .thick-line {
+        border-top: 2px solid;
+    }
+  }
+}
+
 /*########################
 	media
 ##########################*/
