--- a/public/views/jobs.html
+++ b/public/views/jobs.html
@@ -14,7 +14,7 @@
 				</address>
 			</div>
 			<div class="col-sm-4">
-				<h2>Details</h2>
+				<h2>Details: {{selectedJob.jobId}}</h2>
 				<div class="form-group">
 					Type of Job: {{selectedJob.type}}
 				</div>
@@ -42,7 +42,7 @@
 					Tech Notes: {{selectedJob.techNotes}}
 				</div>
 				<div class="form-group">
-					Complete Date: {{selectedJob.completeDate}}
+					Complete Date: <input type="text" ng-model="selectedJob.completeDate" class="form-control" placeholder="Completed Date"/>
 				</div>
 				<div class="form-group">
 					Total Time: {{selectedJob.totalTime}}
@@ -63,6 +63,7 @@
 	</div>
 	<div class="row">
 		<div class="col-sm-12">
+			<h2>Active Jobs</h2>
 			<table class="table table-striped">
 				<thead>
 					<tr>
@@ -78,6 +79,31 @@
 						<td>{{job.type}}</td>
 						<td>{{job.startDate}} {{job.startTime}}</td>
 						<td>{{job.companyDetails[0].city}}, {{job.companyDetails[0].state}}</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-12">
+			<h2>All Jobs</h2>
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th>Company</th>
+						<th>Job Type</th>
+						<th>Start Date</th>
+						<th>Complete Date</th>
+						<th>Location</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr class="job-row" ng-repeat="job2 in alljobs | orderBy : ['startDate','-startTime']" ng-click="setSelectedJob(job2._id)">
+						<td>{{job2.companyDetails[0].companyName}}</td>
+						<td>{{job2.type}}</td>
+						<td>{{job2.startDate}} {{job2.startTime}}</td>
+						<td>{{jobs2.completeDate}}</td>
+						<td>{{job2.companyDetails[0].city}}, {{job2.companyDetails[0].state}}</td>
 					</tr>
 				</tbody>
 			</table>
