--- a/public/views/addJob.html
+++ b/public/views/addJob.html
@@ -119,7 +119,8 @@
 				<option value="">Select Technician</option>
 			</select>
 		</div>
-
+		<input type="hidden" ng-model="newJob.jobCompleteDate">
+		<input type="hidden" ng-model="newJob.managerNotes">
 		<button type="submit" class="btn btn-primary" ng-click="addJob()">Submit</button>
 	</form>
 </div>
