--- a/public/views/jobs.html
+++ b/public/views/jobs.html
@@ -50,14 +50,18 @@
 			</div>
 			<div class="col-sm-4">
 				<h2>Manager</h2>
+				<div class="form-group">
+					Job Number:
+					<input type="text" class="form-control" ng-model="selectedJob.job_id"/>
+				</div>
 				
 				<div class="form-group">
-					Manager Notes
+					Manager Notes:
 					<textarea name="managerNotes" id="managerNotes" cols="30" rows="3" class="form-control" ng-model="selectedJob.managerNotes"></textarea>
 				</div>
 
 				<button type="button" class="btn btn-default" ng-click="closeOpenJob()">Close</button>
-				<button type="submit" class="btn btn-primary" ng-click="updateJob(selectedJob._id)">Complete</button>
+				<button type="submit" class="btn btn-primary" ng-click="updateJob(selectedJob._id)">Update</button>
 			</div>
 		</form>
 	</div>
