Added truck table, map image, job details

--- a/public/views/techJob.html
+++ b/public/views/techJob.html
@@ -15,7 +15,7 @@
 				<abbr title="Phone">P:</abbr> {{job.contact.phone}}
 			</address>
 			</div>
-			<div class="col-sm-6 " id="map-container" > need api key</div>
+			<div class="col-sm-6 " id="map-container"><img class="img-responsive" src="/images/map-nj.png"></div>
 		</div>
 		<div class="well">
 			<h2 class="text-center">Work Sheet</h2>
