--- a/public/views/techJob.html
+++ b/public/views/techJob.html
@@ -53,12 +53,15 @@
 					</div>
 					<hr>
 					<div class="form-group clearfix">
-						<label for="inputTotalTime" class="col-sm-2 control-label">Total Time:</label>
-						<div class="col-sm-10">
+						<label for="inputTotalTime" class="col-sm-2 control-label">Time:</label>
+						<!-- <div class="col-sm-10">
 							<input type="number" name="totalTime" id="inputTotalTime" class="form-control" step="" >
-						</div>
+						</div> -->
+						<div class="col-sm-4"><button class="btn btn-lg btn-block btn-success">Start</button></div>
+						<div class="col-sm-4 col-sm-offset-1"><button class="btn btn-lg btn-block btn-danger">Stop</button></div>
 					</div>
-					<button type="submit" class="btn btn-primary pull-right">Complete Job</button>
+					
+					<button type="submit" style="margin-top:40px" class="btn btn-lg btn-primary pull-right">Complete Job</button>
 				</form>
 			</div>
 		</div>
